fixed map container overflow;

--- a/src/pages/route-tracking/route-tracking.scss
+++ b/src/pages/route-tracking/route-tracking.scss
@@ -40,7 +40,7 @@ page-route-tracking {
   }
 
   .map-container {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
